# EasyJobScheduler

./: CMakeLists.txt  EasyJobScheduler.code-workspace  README.md
includes/: Task.hpp  TaskManager.hpp
src/: Task.cpp  TaskManager.cpp  main.cpp
tests/: unit_tests.cpp
tests/testData/: A.task  B.task  C.task  D.task  E.task  F.task
